--- a/src/components/Cell.css
+++ b/src/components/Cell.css
@@ -19,8 +19,9 @@
 .cell > span {
   width: 100%;
   height: 100%;
-  display: grid;
-  place-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 1.5rem;
 }
 
